# sky-breaker

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  TODO.md  pyproject.toml
config/: settings.py  urls.py
data/Sleepy/: _План курса.md  День 1.md  День 10.md  День 11.md  День 12.md  День 13.md  День 14.md  День 15.md  День 16.md  День 17.md  День 18.md  День 19.md  День 2.md  День 20.md  День 21.md  День 22.md  День 23.md  День 24.md  День 25.md  День 26.md  День 27.md  День 28.md  День 29.md  День 3.md  День 30.md  День 4.md  День 5.md  День 6.md  День 7.md  День 8.md  День 9.md
sleepy/: admin.py  apps.py  models.py  urls.py  views.py
sleepy/management/commands/: import_articles.py
sleepy/migrations/: 0001_initial.py
sleepy/templates/sleepy/: article_detail.html  article_list.html  base.html
