[tool.poetry]
name = "drf-lessons"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.11"
django = "5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
