[tool.poetry]
name = "drf-lessons"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.11"
django = "5.2"
python-decouple = "3.8"
markdown = "^3.10.1"
gunicorn = "^25.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.19.1"
isort = "^7.0.0"
black = "^26.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
